fix: adjusted stats column  alignment for safari

--- a/src/WebClient/wwwroot/css/app.css
+++ b/src/WebClient/wwwroot/css/app.css
@@ -153,7 +153,10 @@ body, html {
 .text-orange {
     color: #e39a24;
 }
-
+td {
+    display: flex;
+    justify-content: center;
+}
 .text-stats {
     font-size: 22px;
     font-weight: 500;
